# mailslice

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  README.zh.md  pyproject.toml
docs/: splitting-rules.md
examples/: README.md  make_sample_mbox.py
scripts/: smoke.sh
src/mailslice/: __init__.py  __main__.py  cli.py  errors.py  headers.py  labels.py  mboxstream.py  report.py  router.py  splitter.py  writers.py
tests/: conftest.py  test_cli.py  test_fromline.py  test_headers.py  test_labels.py  test_mboxstream.py  test_report.py  test_router.py  test_splitter.py  test_writers.py
