[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mailslice"
version = "0.1.0"
description = "Stream-split giant Google Takeout mbox files into maildir or EML by Gmail label and year, in constant memory."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "JaydenCJ" }]
keywords = ["mbox", "maildir", "gmail", "takeout", "email", "eml", "migration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: System :: Archiving",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
mailslice = "mailslice.cli:main"

[project.urls]
Homepage = "https://github.com/JaydenCJ/mailslice"
Repository = "https://github.com/JaydenCJ/mailslice"
Issues = "https://github.com/JaydenCJ/mailslice/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
